# TaskGestionPractice

./: .gitignore  TASKGESTION.code-workspace
back-task-gestion/: .env.example  database.py  main.py  pyproject.toml
back-task-gestion/api/: routes.py
back-task-gestion/api/endpoints/: task.py  user.py
back-task-gestion/controllers/: task_controller.py  user_controller.py
back-task-gestion/models/: task_model.py
back-task-gestion/schemas/: task.py  user.py
back-task-gestion/services/: user_service.py  websocket.py
front-task-gestion/: README.md  angular.json  package-lock.json  package.json
front-task-gestion/src/: index.html  styles.css
front-task-gestion/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
front-task-gestion/src/app/core/: schemas.ts
front-task-gestion/src/app/share/main-layout/: main-layout.component.html  main-layout.component.ts
front-task-gestion/src/app/share/not-found/: not-found.component.css  not-found.component.html  not-found.component.ts
front-task-gestion/src/app/share/sidebar/: sidebar.component.html  sidebar.component.ts
front-task-gestion/src/app/task/: task.routes.ts
front-task-gestion/src/app/task/gestion-task/: gestion-task.component.html  gestion-task.component.spec.ts  gestion-task.component.ts
front-task-gestion/src/app/task/historial-task/: historial-task.component.html  historial-task.component.spec.ts  historial-task.component.ts
front-task-gestion/src/app/task/search-task/: search-task.component.html  (+2 more)
front-task-gestion/src/app/user/: user.routes.ts
(+29 files in other folders)
